chore(fts) Correct FTS feature
